changed html to use minified bundle scripts

--- a/demo/eqtlViolin.html
+++ b/demo/eqtlViolin.html
@@ -30,7 +30,7 @@
       crossorigin="anonymous">
     </script>
     <script src="https://fastcdn.org/FileSaver.js/1.1.20151003/FileSaver.min.js"></script>
-    <script src="/build/js/eqtl-violin.bundle.dev.js"></script>
+    <script src="/build/js/eqtl-violin.bundle.min.js"></script>
     <script>
         $(document).ready(function(){
             let gencodeId = 'ENSG00000248746.1'; // ACTN3
